--- a/docs/.obsidian/app.json
+++ b/docs/.obsidian/app.json
@@ -2,5 +2,7 @@
   "promptDelete": false,
   "alwaysUpdateLinks": true,
   "attachmentFolderPath": "_attachments",
-  "newLinkFormat": "relative"
+  "newLinkFormat": "relative",
+  "trashOption": "local",
+  "useMarkdownLinks": true
 }
