--- a/docs/.obsidian/appearance.json
+++ b/docs/.obsidian/appearance.json
@@ -1,5 +1,7 @@
 {
   "accentColor": "",
-  "cssTheme": "Atom",
-  "theme": "obsidian"
+  "cssTheme": "",
+  "theme": "obsidian",
+  "monospaceFontFamily": "MonoLisa",
+  "enabledCssSnippets": []
 }
