--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,9 @@ edit_uri: edit/main/docs/
 
 ###### Custom ##################################################################
 
+extra:
+  homepage: https://healkeiser.github.io/vfx_notes
+
 extra_css:
   - stylesheets/extra.css
 
@@ -95,6 +98,9 @@ markdown_extensions:
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
+      options:
+        custom_icons:
+          - docs/overrides/.icons
 
 plugins:
   - search
