--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -98,13 +98,13 @@ markdown_extensions:
 
 plugins:
   - search
-  # - git-authors
-  # - git-revision-date-localized:
-  #     enable_creation_date: true
-  # - git-committers:
-  #     repository: healkeiser/vfx_notes
-  #     branch: main
-  #     # token: !!python/object/apply:os.getenv ["GITHUB_API_KEY"]
+  - git-authors
+  - git-revision-date-localized:
+      enable_creation_date: true
+  - git-committers:
+      repository: healkeiser/vfx_notes
+      branch: main
+      # token: !!python/object/apply:os.getenv ["GITHUB_API_KEY"]
   - pub-debugger:
       console_log:
         enabled: false
