Added Make plugin and refactor directories

--- a/docs/.obsidian/appearance.json
+++ b/docs/.obsidian/appearance.json
@@ -1,6 +1,6 @@
 {
   "accentColor": "",
-  "cssTheme": "",
+  "cssTheme": "Atom",
   "theme": "obsidian",
   "monospaceFontFamily": "MonoLisa",
   "enabledCssSnippets": [
