Update repository name

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,7 @@
 
 ###### CODE ####################################################################
 
-site_name: VFX Notes
+site_name: Notes
 site_author: Valentin Beaumont
 copyright: Copyright &copy; 2021 - 2024 Valentin Beaumont
 repo_url: https://github.com/healkeiser/notes
