Workspace settings and glithbox

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -105,6 +105,7 @@ plugins:
       repository: healkeiser/notes
       branch: main
       # token: !!python/object/apply:os.getenv ["GITHUB_API_KEY"]
+  - glightbox
   - pub-debugger:
       console_log:
         enabled: false
