Adding render tag icon

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,7 @@ extra:
     macOS: macOS
     windows: windows
     home: home
+    render: render
 
 ###### Theme ###################################################################
 
