--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -127,7 +127,7 @@ markdown_extensions:
 plugins:
   - search
   - tags:
-      tags_file: "05 Tags.md"
+      tags_file: "Tags.md"
   - glightbox
   - git-authors
   - git-revision-date-localized:
